Fix top spacing of signup form

--- a/app/assets/stylesheets/identities.scss
+++ b/app/assets/stylesheets/identities.scss
@@ -8,6 +8,12 @@
   align-items: center;
 }
 
+#signup-form {
+  box-sizing: border-box;
+  margin: 50px 30px;
+  padding: 20px 0px 30px 0px;
+}
+
 .mdl-card.form-login {
   height: 460px;
   box-sizing: border-box;
